--- a/client/workshops/workshop2.html
+++ b/client/workshops/workshop2.html
@@ -523,7 +523,7 @@
     <!-- Client-side Js -->
     <script>
       var stripe = Stripe(
-        "pk_test_51L5AsSSCC8JVWfvgEtfJkzHMTh7Z5PLY5m1yhR379sJgwAVZEe13NaiG33wsHSyHnPJMjTNOosiPk6AeMI8q0ims0049IKffiu"
+        "pk_test_51R4nWTDeSMg8FIB36FRFnTl4CMiUhWDmxct2BIJgX0ta3nv33xT5MtacBkThneITAHrgbhjr4rvyvC9K2ciLLw7M003Ok8DzhT"
       );
       var button = document.getElementById("checkout-btn");
       
@@ -538,7 +538,7 @@
         }
 
         // Setting this PriceId here:
-        var priceId = "price_1M0KtiSCC8JVWfvgcKspC6qQ";
+        var priceId = "prod_RzrxtcX1wzE7ox";
 
         fetch("/create-checkout-session/" + priceId, {
           method: "POST",
